# Car-Price-Prediction

./: .gitignore  README.md  app.py  main.py  pyproject.toml
API/: index.html  test_request.py
data/processed/: processed_car_price.csv
notebooks/: EDA.ipynb  first-stage.ipynb  firsttraining.ipynb  training-final.ipynb  tring-encoding.ipynb
scripts/: import_main_debug.py  main_import_trace.txt  run_server.ps1
src/data/: preprocessor.py
src/utils/: helpers.py
