[project]
name = "car-price-prediction"
version = "1.0.0"
description = "نموذج تعلم آلي للتنبؤ بأسعار السيارات"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "jupyterlab>=4.0.0",
]

[tool.uv]
dev-dependencies = ["pytest", "black", "flake8", "jupyterlab"]